compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__unit_with_bits_option_constant.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub const bits = <<1, 2, 3>>\npub const more_bits = <<bits:bits-size(3)-unit(8)>>\n\npub fn main() {\n  more_bits\n}\n"
---
----- SOURCE CODE

pub const bits = <<1, 2, 3>>
pub const more_bits = <<bits:bits-size(3)-unit(8)>>

pub fn main() {
  more_bits
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export const bits = /* @__PURE__ */ toBitArray([1, 2, 3]);

export const more_bits = /* @__PURE__ */ toBitArray([bitArraySlice(bits, 0, 24)]);

export function main() {
  return more_bits;
}
