compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__utf8_codepoint.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:utf8_codepoint, "Gleam":utf8>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringBits, codepointBits } from "../gleam.mjs";

export function go(x) {
  return toBitArray([codepointBits(x), stringBits("Gleam")]);
}
