compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__variable.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<256, 4, x>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<256, 4, x>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go(x) {
  return toBitArray([0, 4, x]);
}
