compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__variable_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x, y) {\n  <<x:size(y)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x, y) {
  <<x:size(y)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go(x, y) {
  return toBitArray([sizedInt(x, y, true)]);
}
