compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__zero_size_int_segment_constant.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub const value = <<0:size(0), 1:size(8)>>\n"
---
----- SOURCE CODE

pub const value = <<0:size(0), 1:size(8)>>


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export const value = /* @__PURE__ */ toBitArray([1]);
