compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__zero_size_int_segment_with_variable_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x: Int) {\n  <<x:size(0), 1:size(8)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) {
  <<x:size(0), 1:size(8)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go(x) {
  return toBitArray([1]);
}
